# rust-windows-inputbox

./: Cargo.toml  README.md  layout.txt
src/: main.rs
